syntax = "proto3";

package book;

service BookService {
    rpc CreateBook(CreateBookRequest) returns (CreateBookResponse);
    rpc GetBooks(GetBooksRequest) returns (GetBooksResponse);
}

message Book {
    int32 id = 1;
    string title = 2;
    string description = 3;
    string image = 4;
}

message CreateBookRequest {
    string title = 1;
    string description = 2;
    string image = 3;
}

message CreateBookResponse {
    string message = 1;
    Book book = 2;
}

message GetBooksRequest {
}

message GetBooksResponse {
    repeated Book books = 1;
}

